[metadata]
name = chord-dht-viz
version = 1.0.0
description = A comprehensive Chord DHT implementation with graph visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akashbht/Chord-DHT-graphi-viz
author = Team Glitch
author_email = team.glitch@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    examples*

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.0.0
    black>=21.0.0
    flake8>=3.9.0
    mypy>=0.910
optional =
    networkx>=2.6
    matplotlib>=3.5.0

[options.entry_points]
console_scripts =
    chord-dht = Main:main

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
minversion = 6.0

[coverage:run]
source = .
omit = 
    tests/*
    examples/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    tests/fixtures/*

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True